--- a/preprocessing/housing/housing_utilities_merge_helper.ipynb
+++ b/preprocessing/housing/housing_utilities_merge_helper.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,19 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "home_tmp = pd.read_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/Raw-Data/mismatched_home.csv', header = None)\n",
-    "cdbg_tmp = pd.read_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/Raw-Data/mismatched_cdbg.csv', header = None)\n",
+    "home_tmp = pd.read_csv('~/Dropbox/CDS-2019-AlbanyHub/Raw-Data/mismatched_home.csv', header = None)\n",
+    "cdbg_tmp = pd.read_csv('~/Dropbox/CDS-2019-AlbanyHub/Raw-Data/mismatched_cdbg.csv', header = None)\n",
     "mismatched_home = home_tmp.iloc[:,0]\n",
     "mismatched_cdbg = cdbg_tmp.iloc[:,0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "99"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,25 +71,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/envs/cds_env/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (1) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n",
+      "/anaconda3/envs/cds_env/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3049: DtypeWarning: Columns (4,9) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
-    "df_utilities2012 = pd.read_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/Processed-Data/Totals2012.csv')\n",
-    "df_utilities2013 = pd.read_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/Processed-Data/Totals2013.csv')\n",
-    "df_utilities2014 = pd.read_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/Processed-Data/Totals2014.csv')\n",
-    "df_utilities2015 = pd.read_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/Processed-Data/Totals2015.csv')\n",
-    "df_utilities2016 = pd.read_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/Processed-Data/Totals2016.csv')\n",
-    "df_utilities2017 = pd.read_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/Processed-Data/Totals2017.csv')\n",
-    "df_utilities2018 = pd.read_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/Processed-Data/Totals2018.csv')\n",
-    "df_utilities2019 = pd.read_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/Processed-Data/Totals2019.csv')\n",
+    "df_utilities2012 = pd.read_csv('~/Dropbox/CDS-2019-AlbanyHub/Processed-Data/Totals2012.csv')\n",
+    "df_utilities2013 = pd.read_csv('~/Dropbox/CDS-2019-AlbanyHub/Processed-Data/Totals2013.csv')\n",
+    "df_utilities2014 = pd.read_csv('~/Dropbox/CDS-2019-AlbanyHub/Processed-Data/Totals2014.csv')\n",
+    "df_utilities2015 = pd.read_csv('~/Dropbox/CDS-2019-AlbanyHub/Processed-Data/Totals2015.csv')\n",
+    "df_utilities2016 = pd.read_csv('~/Dropbox/CDS-2019-AlbanyHub/Processed-Data/Totals2016.csv')\n",
+    "df_utilities2017 = pd.read_csv('~/Dropbox/CDS-2019-AlbanyHub/Processed-Data/Totals2017.csv')\n",
+    "df_utilities2018 = pd.read_csv('~/Dropbox/CDS-2019-AlbanyHub/Processed-Data/Totals2018.csv')\n",
+    "df_utilities2019 = pd.read_csv('~/Dropbox/CDS-2019-AlbanyHub/Processed-Data/Totals2019.csv')\n",
     "df_utilities_list = [df_utilities2012,df_utilities2013,df_utilities2014,df_utilities2015,\n",
     "                    df_utilities2016,df_utilities2017,df_utilities2018,df_utilities2019]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,11 +125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xlsx = pd.ExcelFile('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/Raw-Data/All CED Funded Projects 2007-2017.xlsx')\n",
+    "xlsx = pd.ExcelFile('~/Dropbox/CDS-2019-AlbanyHub/Raw-Data/All CED Funded Projects 2007-2017.xlsx')\n",
     "df1_original = pd.read_excel(xlsx, 'HOME Funded Projects')\n",
     "df2_original = pd.read_excel(xlsx, 'CDBG Funded Projects')\n",
     "df_original = pd.concat([df1_original, df2_original])\n",
@@ -134,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,18 +227,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s_utilities = space_fix_utilities(s_utilities)\n",
-    "df_parsehome = pd.read_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/Raw-Data/fixed_home_v02.csv')\n",
-    "df_parsecdbg = pd.read_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/Raw-Data/fixed_cdbg.csv')"
+    "# s_utilities = space_fix_utilities(s_utilities)\n",
+    "df_parsehome = pd.read_csv('~/Dropbox/CDS-2019-AlbanyHub/Raw-Data/fixed_home_v02.csv')\n",
+    "df_parsecdbg = pd.read_csv('~/Dropbox/CDS-2019-AlbanyHub/Raw-Data/fixed_cdbg.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +437,7 @@
        "Series([], Name: Address, dtype: object)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,11 +448,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all_addresses = pd.read_csv('~/Dropbox (Amherst College)/CDS-2019-AlbanyHub/Processed-Data/all_addresses.csv')\n",
+    "df_all_addresses = pd.read_csv('~/Dropbox/CDS-2019-AlbanyHub/Processed-Data/all_addresses.csv')\n",
     "df_all_addresses = df_all_addresses.drop('Unnamed: 0', axis = 1)\n",
     "s_all_addresses = df_all_addresses['line1']"
    ]
@@ -473,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +498,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +525,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +663,7 @@
        "739       Completed    CDBG        5092.00      5092.00      0.0  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,13 +671,252 @@
    "source": [
     "df_original[df_original['Address'].str.contains('Madison')]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0             2620  S MADISON  ST\n",
+       "1               529  COCHRAN  AVE\n",
+       "2          2226  OLD DOMINION  DR\n",
+       "3             2701  DONCASTER  RD\n",
+       "4            250  BONNY VIEW  AVE\n",
+       "5            249  BONNY VIEW  AVE\n",
+       "6            248  BONNY VIEW  AVE\n",
+       "7            251  BONNY VIEW  AVE\n",
+       "8            253  BONNY VIEW  AVE\n",
+       "9            247  BONNY VIEW  AVE\n",
+       "10           254  BONNY VIEW  AVE\n",
+       "11           243  BONNY VIEW  AVE\n",
+       "12           245  BONNY VIEW  AVE\n",
+       "13           252  BONNY VIEW  AVE\n",
+       "14            2010  LAFAYETTE  CR\n",
+       "15              20  S JACKSON  ST\n",
+       "16               603  N HALEY  ST\n",
+       "17           1112  PEACHTREE  TER\n",
+       "18             2517  CARDINAL  DR\n",
+       "19            2006  LAFAYETTE  CR\n",
+       "20              818  WESTVIEW  DR\n",
+       "21              2501  REDWOOD  CR\n",
+       "22              933  RANDOLPH  DR\n",
+       "23            2201  CHAMPAGNE  DR\n",
+       "24              215  BROADWAY  ST\n",
+       "25              1003  HOLLAND  DR\n",
+       "26            2200  CHAMPAGNE  LN\n",
+       "27           1019  UNIVERSITY  DR\n",
+       "28            509  WESTOVER  BLVD\n",
+       "29            2312  GLENEAGLE  DR\n",
+       "30          421  N WESTOVER  BLVD\n",
+       "31          421  N WESTOVER  BLVD\n",
+       "32           2710  W OAKRDIGE  DR\n",
+       "33    1404  WHISPERING PINES  AVE\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mismatched_home"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    2312  GLENEAGLES  DR\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lev_list(s_utilities, \"2312  GLENEAGLE  DR\", 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    2312 GLENEAGLES DR\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lev_list(s_all_addresses, \"2312 GLENEAGLE DR\", 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Parcel ID</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>XY Coordinates</th>\n",
+       "      <th>Plan Year</th>\n",
+       "      <th>IDIS Project</th>\n",
+       "      <th>Project</th>\n",
+       "      <th>IDIS Activity ID</th>\n",
+       "      <th>Activity Status</th>\n",
+       "      <th>Program</th>\n",
+       "      <th>Funded Amount</th>\n",
+       "      <th>Draw Amount</th>\n",
+       "      <th>Balance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>232</th>\n",
+       "      <td>00238/00047/003</td>\n",
+       "      <td>2312 Gleneagle Drive Apt. B</td>\n",
+       "      <td>Albany</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>31.5532888, -84.2080964</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Tenant Based Rental Assistance</td>\n",
+       "      <td>1476</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>HOME</td>\n",
+       "      <td>1026.31</td>\n",
+       "      <td>1026.31</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>233</th>\n",
+       "      <td>00238/00047/001</td>\n",
+       "      <td>2316-B Gleneagles Drive</td>\n",
+       "      <td>Albany</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>31.5532685, -84.2086317</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Tenant Based Rental Assistance</td>\n",
+       "      <td>1412</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>HOME</td>\n",
+       "      <td>7609.94</td>\n",
+       "      <td>7609.94</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>270</th>\n",
+       "      <td>00238/00047/003</td>\n",
+       "      <td>2312 Gleneagles Drive Apt. B</td>\n",
+       "      <td>Albany</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>31.5532888, -84.2080964</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Tenant Based Rental Assistance</td>\n",
+       "      <td>1494</td>\n",
+       "      <td>Open</td>\n",
+       "      <td>HOME</td>\n",
+       "      <td>6689.00</td>\n",
+       "      <td>3866.53</td>\n",
+       "      <td>2822.47</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Parcel ID                       Address    City State  \\\n",
+       "232  00238/00047/003   2312 Gleneagle Drive Apt. B  Albany    GA   \n",
+       "233  00238/00047/001       2316-B Gleneagles Drive  Albany    GA   \n",
+       "270  00238/00047/003  2312 Gleneagles Drive Apt. B  Albany    GA   \n",
+       "\n",
+       "              XY Coordinates  Plan Year  IDIS Project  \\\n",
+       "232  31.5532888, -84.2080964       2016            19   \n",
+       "233  31.5532685, -84.2086317       2016            19   \n",
+       "270  31.5532888, -84.2080964       2017            11   \n",
+       "\n",
+       "                            Project  IDIS Activity ID Activity Status Program  \\\n",
+       "232  Tenant Based Rental Assistance              1476       Completed    HOME   \n",
+       "233  Tenant Based Rental Assistance              1412       Completed    HOME   \n",
+       "270  Tenant Based Rental Assistance              1494            Open    HOME   \n",
+       "\n",
+       "     Funded Amount  Draw Amount  Balance  \n",
+       "232        1026.31      1026.31     0.00  \n",
+       "233        7609.94      7609.94     0.00  \n",
+       "270        6689.00      3866.53  2822.47  "
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_original[df_original['Address'].str.contains('Gleneagle')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cds] *",
+   "display_name": "Python [conda env:cds_env] *",
    "language": "python",
-   "name": "conda-env-cds-py"
+   "name": "conda-env-cds_env-py"
   },
   "language_info": {
    "codemirror_mode": {
