--- a/census_processing/david_census.ipynb
+++ b/census_processing/david_census.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "from pandas import DataFrame\n",
-    "import re\n",
-    "from functools import reduce"
+    "import re"
    ]
   },
   {
