--- a/census_processing/david_census.ipynb
+++ b/census_processing/david_census.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
        "[112 rows x 9 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1271,7 +1271,7 @@
        "4                                         91  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1523,7 @@
        "4                           288                                   81  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1619,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1628,7 +1628,7 @@
        "(112, 11)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1668,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1697,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1725,23 +1725,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GEO.id</th>\n",
+       "      <th>GEO.id2</th>\n",
+       "      <th>HD01_VD01</th>\n",
+       "      <th>HD02_VD01</th>\n",
+       "      <th>HD01_VD02</th>\n",
+       "      <th>HD02_VD02</th>\n",
+       "      <th>HD01_VD03</th>\n",
+       "      <th>HD02_VD03</th>\n",
+       "      <th>block</th>\n",
+       "      <th>tract</th>\n",
+       "      <th>county</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Id</td>\n",
+       "      <td>Id2</td>\n",
+       "      <td>Estimate; Total:</td>\n",
+       "      <td>Margin of Error; Total:</td>\n",
+       "      <td>Estimate; Total: - Owner occupied</td>\n",
+       "      <td>Margin of Error; Total: - Owner occupied</td>\n",
+       "      <td>Estimate; Total: - Renter occupied</td>\n",
+       "      <td>Margin of Error; Total: - Renter occupied</td>\n",
+       "      <td>Geography</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1500000US130079601001</td>\n",
+       "      <td>130079601001</td>\n",
+       "      <td>869</td>\n",
+       "      <td>181</td>\n",
+       "      <td>457</td>\n",
+       "      <td>159</td>\n",
+       "      <td>412</td>\n",
+       "      <td>154</td>\n",
+       "      <td>1</td>\n",
+       "      <td>960100</td>\n",
+       "      <td>Baker County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1500000US130079601002</td>\n",
+       "      <td>130079601002</td>\n",
+       "      <td>1247</td>\n",
+       "      <td>223</td>\n",
+       "      <td>764</td>\n",
+       "      <td>170</td>\n",
+       "      <td>483</td>\n",
+       "      <td>210</td>\n",
+       "      <td>2</td>\n",
+       "      <td>960100</td>\n",
+       "      <td>Baker County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1500000US130079602001</td>\n",
+       "      <td>130079602001</td>\n",
+       "      <td>487</td>\n",
+       "      <td>149</td>\n",
+       "      <td>386</td>\n",
+       "      <td>133</td>\n",
+       "      <td>101</td>\n",
+       "      <td>74</td>\n",
+       "      <td>1</td>\n",
+       "      <td>960200</td>\n",
+       "      <td>Baker County</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1500000US130079602002</td>\n",
+       "      <td>130079602002</td>\n",
+       "      <td>645</td>\n",
+       "      <td>120</td>\n",
+       "      <td>489</td>\n",
+       "      <td>120</td>\n",
+       "      <td>156</td>\n",
+       "      <td>91</td>\n",
+       "      <td>2</td>\n",
+       "      <td>960200</td>\n",
+       "      <td>Baker County</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(112, 11)"
+       "                  GEO.id       GEO.id2         HD01_VD01  \\\n",
+       "0                     Id           Id2  Estimate; Total:   \n",
+       "1  1500000US130079601001  130079601001               869   \n",
+       "2  1500000US130079601002  130079601002              1247   \n",
+       "3  1500000US130079602001  130079602001               487   \n",
+       "4  1500000US130079602002  130079602002               645   \n",
+       "\n",
+       "                 HD02_VD01                          HD01_VD02  \\\n",
+       "0  Margin of Error; Total:  Estimate; Total: - Owner occupied   \n",
+       "1                      181                                457   \n",
+       "2                      223                                764   \n",
+       "3                      149                                386   \n",
+       "4                      120                                489   \n",
+       "\n",
+       "                                  HD02_VD02  \\\n",
+       "0  Margin of Error; Total: - Owner occupied   \n",
+       "1                                       159   \n",
+       "2                                       170   \n",
+       "3                                       133   \n",
+       "4                                       120   \n",
+       "\n",
+       "                            HD01_VD03  \\\n",
+       "0  Estimate; Total: - Renter occupied   \n",
+       "1                                 412   \n",
+       "2                                 483   \n",
+       "3                                 101   \n",
+       "4                                 156   \n",
+       "\n",
+       "                                   HD02_VD03      block   tract        county  \n",
+       "0  Margin of Error; Total: - Renter occupied  Geography    None          None  \n",
+       "1                                        154          1  960100  Baker County  \n",
+       "2                                        210          2  960100  Baker County  \n",
+       "3                                         74          1  960200  Baker County  \n",
+       "4                                         91          2  960200  Baker County  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "owner_renter1.head()\n",
-    "owner_renter1.shape"
+    "#owner_renter1.shape"
    ]
   },
   {
@@ -1753,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1765,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1774,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1789,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1803,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1831,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1840,7 +1980,7 @@
        "(112, 19)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1859,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2154,7 @@
        "4    2_960200  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2026,7 +2166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -2093,7 +2233,7 @@
        "      <td>1</td>\n",
        "      <td>960100</td>\n",
        "      <td>Baker County</td>\n",
-       "      <td>Block Group 1_960100</td>\n",
+       "      <td>1_960100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2108,7 +2248,7 @@
        "      <td>2</td>\n",
        "      <td>960100</td>\n",
        "      <td>Baker County</td>\n",
-       "      <td>Block Group 2_960100</td>\n",
+       "      <td>2_960100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2123,7 +2263,7 @@
        "      <td>1</td>\n",
        "      <td>960200</td>\n",
        "      <td>Baker County</td>\n",
-       "      <td>Block Group 1_960200</td>\n",
+       "      <td>1_960200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2138,7 +2278,7 @@
        "      <td>2</td>\n",
        "      <td>960200</td>\n",
        "      <td>Baker County</td>\n",
-       "      <td>Block Group 2_960200</td>\n",
+       "      <td>2_960200</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2180,27 +2320,27 @@
        "3                                         74          1  960200  Baker County   \n",
        "4                                         91          2  960200  Baker County   \n",
        "\n",
-       "            block_tract  \n",
-       "0                   NaN  \n",
-       "1  Block Group 1_960100  \n",
-       "2  Block Group 2_960100  \n",
-       "3  Block Group 1_960200  \n",
-       "4  Block Group 2_960200  "
+       "  block_tract  \n",
+       "0         NaN  \n",
+       "1    1_960100  \n",
+       "2    2_960100  \n",
+       "3    1_960200  \n",
+       "4    2_960200  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "owner_renter1['block_tract'] = owner_renter['block'] + '_' + owner_renter1['tract']\n",
+    "owner_renter1['block_tract'] = owner_renter1['block'] + '_' + owner_renter1['tract']\n",
     "owner_renter1.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -2459,7 +2599,7 @@
        "4          2  960200  Baker County    2_960200  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2471,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2480,7 +2620,7 @@
        "(112, 23)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2491,7 +2631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2500,7 +2640,7 @@
        "(112, 23)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2511,7 +2651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2520,7 +2660,7 @@
        "(112, 39)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2531,7 +2671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2540,7 +2680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2549,7 +2689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
